[tool.poetry]
name = "cybersecurity-agent-pinewheel"
version = "0.1.0"
description = "A LangGraph-based agentic cybersecurity pipeline for automating security audits."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
langgraph = "^0.2.74"
langchain-core = "^0.3.39"
langchain-groq = "^0.2.4"
streamlit = "^1.42.2"
groq = "^0.1.0"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"